--- a/index.html
+++ b/index.html
@@ -34,7 +34,167 @@
         </form>
       </header>
       <main>
-        <div class="hero"></div>
+        <div class="hero">
+          <section class="sectionOne">
+            <h1>First I wanted to be a veterinarian</h1>
+            <p>
+              Lorem Ipsum available but the majority have suffered alteration in
+              some form, by injected humour randomised words.
+            </p>
+            <div class="cta">
+              <a class="cta__a__contactUs active" href="#">Contact Us</a>
+              <a class="cta__a__ourService" href="#">Our Service</a>
+            </div>
+          </section>
+          <img src="./img/dog.png" alt="black french bulldog" />
+        </div>
+        <div class="sectionTwoHolder full-bleed">
+          <section>
+            <h2>As a veterinarian and lover of animals.</h2>
+            <p>
+              Lorem Ipsum available but the majoty suffered alteration in some
+              form, by humour randomised words.
+            </p>
+            <a href="#">Our Service</a>
+            <div class="sectionTwo__img_holder">
+              <img src="./img/image1.png" alt="German sheppard with vet" />
+            </div>
+          </section>
+        </div>
+
+        <div class="sectionThreeHolder full-bleed">
+          <section>
+            <h1>Title Here</h1>
+            <div class="card">
+              <img src="./img/image3.png" alt="dog with vet" />
+              <h2>Veterinarian</h2>
+              <p>
+                Lorem Ipsum available, but the majority have suffered alteration
+                in some.
+              </p>
+            </div>
+            <div class="card">
+              <img src="./img/image2.png" alt="dog with vet" />
+              <h2>Vaccination Care</h2>
+              <p>
+                Lorem Ipsum available, but the majority have suffered alteration
+                in some.
+              </p>
+            </div>
+            <div class="card">
+              <img src="./img/image4.png" alt="dog with vet" />
+              <h2>Dental Care</h2>
+              <p>
+                Lorem Ipsum available, but the majority have suffered alteration
+                in some.
+              </p>
+            </div>
+          </section>
+        </div>
+
+        <div class="sectionFourHolder">
+          <section>
+            <h2>As a veterinarian and lover of animals</h2>
+            <p>
+              Lorem Ipsum available but the majoty suffered alteration in some
+              form, by humour randomised words
+            </p>
+            <a href="#">Our Service</a>
+          </section>
+          <div class="sectionFour__img_holder">
+            <a href="#">
+              <div class="btn__play"></div>
+              <img src="./img/image5.png" alt="dog with vet" />
+            </a>
+          </div>
+        </div>
+
+        <div class="sectionFiveHolder">
+          <section>
+            <h1>Title Here</h1>
+            <p>
+              <span class="span_content1"
+                >Lorem Ipsum available, but the majority have</span
+              >
+              <span class="content2">suffered alterationin some form.</span>
+            </p>
+            <div class="cardHolder">
+              <div class="card">
+                <img src="./img/image7.png" alt="dog with vet" />
+                <h2><span>$50</span> $30</h2>
+                <a href="#">Buy Now</a>
+              </div>
+              <div class="card">
+                <img src="./img/image8.png" alt="dog with vet" />
+                <h2><span>$40</span> $25</h2>
+                <a href="#">Buy Now</a>
+              </div>
+              <div class="card">
+                <img src="./img/image6.png" alt="dog with vet" />
+                <h2><span>$45</span> $20</h2>
+                <a href="#">Buy Now</a>
+              </div>
+            </div>
+          </section>
+        </div>
+
+        <div class="sectionSixHolder full-bleed">
+          <section>
+            <h1>The vetcare team</h1>
+
+            <p>
+              <span class="span_content1"
+                >Lorem Ipsum available, but the majority have</span
+              >
+              <span class="content2">suffered alterationin some form.</span>
+            </p>
+
+            <div class="card">
+              <img src="./img/image9.png" alt="dog with vet" />
+              <h2>Jennifer Mullen</h2>
+              <h3>veterinary</h3>
+              <div class="socialHolder">
+                <a></a><a href="#"> </a><a href="#"></a><a href="#"></a>
+              </div>
+            </div>
+            <div class="card">
+              <img src="./img/image10.png" alt="dog with vet" />
+              <h2>Sheeren Collins</h2>
+              <h3>administration</h3>
+              <div class="socialHolder">
+                <a href="#"> </a><a href="#"> </a><a href="#"></a
+                ><a href="#"></a>
+              </div>
+            </div>
+            <div class="card">
+              <img src="./img/image11.png" alt="dog with vet" />
+              <h2>David Verhulst</h2>
+              <h3>veterinary</h3>
+              <div class="socialHolder">
+                <a href="#"> </a><a href="#"> </a><a href="#"></a
+                ><a href="#"></a>
+              </div>
+            </div>
+          </section>
+        </div>
+
+        <div class="sectionSevenHolder">
+          <div class="card">
+            <div id="card_heart"></div>
+            <h3>+34793</h3>
+            <h2>Happy Clients</h2>
+          </div>
+          <div class="card">
+            <div id="card_doctor"></div>
+            <h3>+45382</h3>
+            <h2>Department</h2>
+          </div>
+          <div class="card">
+            <div id="card_injection"></div>
+            <h3>+54762</h3>
+            <h2>Vaccinations</h2>
+          </div>
+        </div>
       </main>
     </div>
   </body>
